Changes from openEHR/archie commit 2e07d73 Cleanup ADL14Converter code (openEHR#648)